# SerialLogger

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  prepare.bat  vcpkg.json
.github/workflows/: CI-tests.yml
app/: CMakeLists.txt  main.cpp  serialLogger.cpp
application/: CMakeLists.txt  application.cpp
application/include/application/: AppConnectionSupervisor.hpp
application/modules/: CMakeLists.txt
application/modules/NetlibApp/: CMakeLists.txt
application/modules/NetlibApp/include/NetlibApp/Connection/: Connection.hpp
application/modules/NetlibApp/include/NetlibApp/Connection/Asio/: AsioSerialConnectionFactory.hpp
application/modules/NetlibApp/include/NetlibApp/EndpointEnumerator/Windows/COMPort/: WindowsCOMPortScanner.hpp
application/modules/NetlibApp/include/NetlibApp/Event/Asio/: AsioEventLoop.hpp  AsioTimer.hpp
application/modules/NetlibApp/include/NetlibApp/Server/: Server.hpp
application/modules/NetlibApp/include/NetlibApp/Transport/Asio/: AsioSerialTextStream.hpp  SerialOptions.hpp
application/modules/NetlibApp/src/: AsioSerialConnectionFactory.cpp  AsioSerialTextStream.cpp  Server.cpp  WindowsCOMPortScanner.cpp  connection.cpp
application/modules/guiBackend/: CMakeLists.txt
application/modules/guiBackend/include/model/: model.hpp
application/modules/guiBackend/include/presenter/: presenter.hpp
application/modules/guiBackend/include/view/: LogViewer.hpp  plotter.hpp
application/modules/guiBackend/interfaces/: CMakeLists.txt
application/modules/guiBackend/interfaces/model/: Imodel.hpp
application/modules/guiBackend/src/: FileExplorer.cpp  LogViewer.cpp  model.cpp  plotter.cpp  presenter.cpp  renderFileExplorer.cpp
application/src/: AppConnectionSupervisor.cpp  application.cpp
cmake/: ConfigSafeGuards.cmake  VcpkgSetup.cmake  Warnings.cmake
common/: CMakeLists.txt
common/EventDispatch/: CMakeLists.txt
common/EventDispatch/include/EventDispatch/: AwaitableEventEmitter.hpp  AwaitableEventHandler.hpp  EventCompletionLatch.hpp  EventEmitter.hpp  EventHandler.hpp  EventRouter.hpp
common/EventDispatch/interfaces/: CMakeLists.txt
common/EventDispatch/interfaces/EventDispatch/: IAwaitableEventEmitter.hpp  IAwaitableEventHandler.hpp  ICompletionNotifier.hpp  ICompletionWaiter.hpp  IEventEmitter.hpp  IEventHandler.hpp  IEventRouter.hpp
common/EventDispatch/mockups/EventDispatch/: EventCompletionLatchMock.hpp  EventDispatchMock.hpp
common/EventDispatch/src/: EventCompletionLatch.cpp  EventEmitter.cpp
common/EventDispatch/unit_test/tests/: test_EventDispatch.cpp  test_EventRouter.cpp
common/NetlibCore/: CMakeLists.txt
common/NetlibCore/include/NetlibCore/Connection/: Connection.hpp  ConnectionSupervisor.hpp
common/NetlibCore/include/NetlibCore/ConnectionSupervisor/: ServerBase.hpp
common/NetlibCore/include/NetlibCore/EndPointEnumerator/: SerialPortScannerAdapter.hpp
common/NetlibCore/include/NetlibCore/Queue/: TSQueue.hpp
common/NetlibCore/interfaces/: CMakeLists.txt
common/NetlibCore/interfaces/NetlibCore/Connection/: IConnection.hpp  IConnectionFactory.hpp  IConnectionSupervisor.hpp
common/NetlibCore/interfaces/NetlibCore/ConnectionSupervisor/: IServerBase.hpp
common/NetlibCore/interfaces/NetlibCore/EndPointEnumerator/: IEndPointEnumerator.hpp  ISerialPortScanner.hpp
common/NetlibCore/interfaces/NetlibCore/Event/: IEventLoop.hpp  ITimer.hpp
common/NetlibCore/interfaces/NetlibCore/Queue/: ITSQueue.hpp
common/NetlibCore/interfaces/NetlibCore/Queue/types/: Message.hpp
common/NetlibCore/interfaces/NetlibCore/Transport/: ITextStream.hpp
common/NetlibCore/src/: Connection.cpp  ConnectionSupervisor.cpp  serverBase.cpp
common/PointerSafety/: CMakeLists.txt
common/PointerSafety/include/PointerSafety/: RuntimeCheckedPtr.hpp
design/: SerialPort_UML_design.eapx
modules/: CMakeLists.txt
modules/Presenter/: Presenter.cpp
modules/Presenter/include/Presenter/: Presenter.hpp
modules/Serialport/: CMakeLists.txt
modules/Serialport/Netlib/: CMakeLists.txt  ServerBase.cpp
modules/Serialport/Netlib/include/Connection/: AsioSerialConnectionFactory.hpp  Connection.hpp
modules/Serialport/Netlib/include/PortScanner/: ICOMPortScanner.hpp  SerialPortScannerAdapter.hpp  WindowsCOMPortScanner.hpp
modules/Serialport/Netlib/include/ServerBase/: AsioEventLoop.hpp  AsioTimer.hpp  IServerBase.hpp  ServerBase.hpp
modules/Serialport/Netlib/include/TSQueue/: TSQueue.hpp
modules/Serialport/Netlib/interfaces/: CMakeLists.txt
modules/Serialport/Netlib/interfaces/connection/: IconnectionFactory.hpp
modules/Serialport/Netlib/interfaces/portScanner/: IcomPortScanner.hpp  IendPointEnumerator.hpp  IserialPortScanner.hpp
modules/Serialport/Netlib/interfaces/serverBase/: ITimer.hpp  IserverBase.hpp
modules/Serialport/Netlib/interfaces/tsQueue/: ItsQueue.hpp
modules/Serialport/Netlib/interfaces/tsQueue/types/: message.hpp
modules/Serialport/Netlib/src/: AsioSerialConnectionFactory.cpp  connection.cpp  serverBase.cpp  windowsCOMPortScanner.cpp
modules/Serialport/Server/: CMakeLists.txt  Server.cpp
modules/Serialport/Server/include/Server/: Server.hpp
modules/Serialport/Server/src/: server.cpp
modules/guiBackend/: CMakeLists.txt
modules/guiBackend/include/model/: model.hpp
modules/guiBackend/interfaces/: CMakeLists.txt
modules/guiBackend/src/: model.cpp  plotter.cpp  presenter.cpp
modules/view/: Plotter.cpp
src/Presenter/: CMakeLists.txt  Presenter.cpp
src/Presenter/include/Presenter/: IPresenter.hpp  Presenter.hpp
src/Serialport/: CMakeLists.txt
src/Serialport/Netlib/: CMakeLists.txt  Connection.cpp  ServerBase.cpp  WindowsCOMPortScanner.cpp
src/Serialport/Server/: CMakeLists.txt  Server.cpp
src/Serialport/Server/include/Server/: Server.hpp
src/model/: CMakeLists.txt  model.cpp
src/model/include/model/: Imodel.hpp  model.hpp
src/view/: CMakeLists.txt  Plotter.cpp  RenderFileExplorer.cpp
src/view/include/view/: Plotter.hpp  RenderFileExplorer.hpp
tests/: CMakelists.txt
tests/Common/NetlibCore/: test_tsqueue.cpp
(+15 files in other folders)
